--- a/index.ipynb
+++ b/index.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
     "for x_raw, y_raw in points:\n",
     "    # Initialize points this way:\n",
     "    x = FieldElement(x_raw, prime)\n",
-    "    # y = FieldElement(y_raw, prime)\n",
+    "    y = FieldElement(y_raw, prime)\n",
     "    # try initializing, RuntimeError means not on curve\n",
     "    # p = Point(x, y, a, b)"
    ]
