--- a/index.ipynb
+++ b/index.ipynb
@@ -54,9 +54,9 @@
     "    x = FieldElement(x_raw, prime)\n",
     "    y = FieldElement(y_raw, prime)\n",
     "    # try initializing, RuntimeError means not on curve\n",
-    "    # p = Point(x, y, a, b)\n",
     "    try:\n",
-    "        "
+    "        p = Point(x, y, a, b)\n",
+    "    except"
    ]
   },
   {
