automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -56,7 +56,8 @@
     "    # try initializing, RuntimeError means not on curve\n",
     "    try:\n",
     "        p = Point(x, y, a, b)\n",
-    "    except"
+    "    except:\n",
+    "        print(x_raw, y)"
    ]
   },
   {
