automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -36,9 +36,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200 119 not on curve\n",
+      "42 99 not on curve\n"
+     ]
+    }
+   ],
    "source": [
     "from ecc import FieldElement, Point\n",
     "\n",
@@ -57,7 +66,7 @@
     "    try:\n",
     "        p = Point(x, y, a, b)\n",
     "    except:\n",
-    "        print(x_raw, y)"
+    "        print(x_raw, y_raw, 'not on curve')"
    ]
   },
   {
