--- a/index.ipynb
+++ b/index.ipynb
@@ -108,8 +108,8 @@
     "            # y = FieldElement(y_raw, prime)\n",
     "            # Point(x, y, a, b)\n",
     "            # Creating the point should not result in an error\n",
-    "        for valid_point in valid_points:\n",
-    "            \n",
+    "        for x_raw, y_raw in valid_points:\n",
+    "            x = \n",
     "        # iterate over invalid points\n",
     "            # Initialize points this way:\n",
     "            # x = FieldElement(x_raw, prime)\n",
