--- a/index.ipynb
+++ b/index.ipynb
@@ -109,7 +109,8 @@
     "            # Point(x, y, a, b)\n",
     "            # Creating the point should not result in an error\n",
     "        for x_raw, y_raw in valid_points:\n",
-    "            x = FieldElement(x_raw, prm)\n",
+    "            x = FieldElement(x_raw, prime)\n",
+    "            y = Field\n",
     "        # iterate over invalid points\n",
     "            # Initialize points this way:\n",
     "            # x = FieldElement(x_raw, prime)\n",
