automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -110,7 +110,8 @@
     "            # Creating the point should not result in an error\n",
     "        for x_raw, y_raw in valid_points:\n",
     "            x = FieldElement(x_raw, prime)\n",
-    "            y = Field\n",
+    "            y = FieldElement(y_raw, prime)\n",
+    "            \n",
     "        # iterate over invalid points\n",
     "            # Initialize points this way:\n",
     "            # x = FieldElement(x_raw, prime)\n",
