--- a/index.ipynb
+++ b/index.ipynb
@@ -111,7 +111,7 @@
     "        for x_raw, y_raw in valid_points:\n",
     "            x = FieldElement(x_raw, prime)\n",
     "            y = FieldElement(y_raw, prime)\n",
-    "            point = Point(x, y)\n",
+    "            point = Point(x, y, a, b)\n",
     "        # iterate over invalid points\n",
     "            # Initialize points this way:\n",
     "            # x = FieldElement(x_raw, prime)\n",
