--- a/index.ipynb
+++ b/index.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,6 +112,7 @@
     "            x = FieldElement(x_raw, prime)\n",
     "            y = FieldElement(y_raw, prime)\n",
     "            point = Point(x, y, a, b)\n",
+    "        \n",
     "        # iterate over invalid points\n",
     "            # Initialize points this way:\n",
     "            # x = FieldElement(x_raw, prime)\n",
@@ -119,8 +120,7 @@
     "            # Point(x, y, a, b)\n",
     "            # check that creating the point results in a RuntimeError\n",
     "            # with self.assertRaises(RuntimeError):\n",
-    "            #     Point(x, y, a, b)\n",
-    "        raise NotImplementedError"
+    "            #     Point(x, y, a, b)\n"
    ]
   },
   {
@@ -134,12 +134,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.001s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "run_test(ECCTest('test_on_curve'))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
