--- a/index.ipynb
+++ b/index.ipynb
@@ -120,7 +120,12 @@
     "            # Point(x, y, a, b)\n",
     "            # check that creating the point results in a RuntimeError\n",
     "            # with self.assertRaises(RuntimeError):\n",
-    "            #     Point(x, y, a, b)\n"
+    "            #     Point(x, y, a, b)\n",
+    "            \n",
+    "        for x_raw, y_raw in valid_points:\n",
+    "            x = FieldElement(x_raw, prime)\n",
+    "            y = FieldElement(y_raw, prime)\n",
+    "            point = Point(x, y, a, b)\n"
    ]
   },
   {
