automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
     "            # with self.assertRaises(RuntimeError):\n",
     "            #     Point(x, y, a, b)\n",
     "            \n",
-    "        for x_raw, y_raw in valid_points:\n",
+    "        for x_raw, y_raw in invalid_points:\n",
     "            x = FieldElement(x_raw, prime)\n",
     "            y = FieldElement(y_raw, prime)\n",
     "            point = Point(x, y, a, b)\n"
@@ -139,18 +139,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      ".\n",
+      "E\n",
+      "======================================================================\n",
+      "ERROR: test_on_curve (__main__.ECCTest)\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Traceback (most recent call last):\n",
+      "  File \"<ipython-input-6-2f6477865d1b>\", line 42, in test_on_curve\n",
+      "    point = Point(x, y, a, b)\n",
+      "  File \"/home/5AUsK0H7q2C/verifying-points-jsong-pb-sf-072618/ecc.py\", line 156, in __init__\n",
+      "    raise RuntimeError('({}, {}) is not on the curve'.format(self.x, self.y))\n",
+      "RuntimeError: (FieldElement_223(200), FieldElement_223(119)) is not on the curve\n",
       "\n",
-      "OK\n"
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.002s\n",
+      "\n",
+      "FAILED (errors=1)\n"
      ]
     }
    ],
