--- a/index.ipynb
+++ b/index.ipynb
@@ -125,7 +125,8 @@
     "        for x_raw, y_raw in invalid_points:\n",
     "            x = FieldElement(x_raw, prime)\n",
     "            y = FieldElement(y_raw, prime)\n",
-    "            point = Point(x, y, a, b)\n"
+    "            try:\n",
+    "                point = Point(x, y, a, b)\n"
    ]
   },
   {
