--- a/index.ipynb
+++ b/index.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,9 @@
     "            x = FieldElement(x_raw, prime)\n",
     "            y = FieldElement(y_raw, prime)\n",
     "            try:\n",
-    "                point = Point(x, y, a, b)\n"
+    "                point = Point(x, y, a, b)\n",
+    "            except RunTimeError:\n",
+    "                pass\n"
    ]
   },
   {
@@ -140,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -152,11 +154,18 @@
       "ERROR: test_on_curve (__main__.ECCTest)\n",
       "----------------------------------------------------------------------\n",
       "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-6-2f6477865d1b>\", line 42, in test_on_curve\n",
+      "  File \"<ipython-input-8-73bbe3cac9b7>\", line 43, in test_on_curve\n",
       "    point = Point(x, y, a, b)\n",
       "  File \"/home/5AUsK0H7q2C/verifying-points-jsong-pb-sf-072618/ecc.py\", line 156, in __init__\n",
       "    raise RuntimeError('({}, {}) is not on the curve'.format(self.x, self.y))\n",
       "RuntimeError: (FieldElement_223(200), FieldElement_223(119)) is not on the curve\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"<ipython-input-8-73bbe3cac9b7>\", line 44, in test_on_curve\n",
+      "    except RunTimeError:\n",
+      "NameError: name 'RunTimeError' is not defined\n",
       "\n",
       "----------------------------------------------------------------------\n",
       "Ran 1 test in 0.002s\n",
